--- a/HTML/index.html
+++ b/HTML/index.html
@@ -5,13 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../CSS/style.css">
     <title>Home | Águapar</title>
+    <link rel="icon" href="../RES/logoaguapar-removebg-preview.png">
 </head>
 <body>
     <header>
-        <div>
+        <div id="menucima">
             <ul>
+                &#160 | &#160
                 <li>
-                    <a href="#">
+                    <a href="">
                         0003 &#160 000 &#160 3078 
                     </a>
                 </li>
@@ -40,17 +42,56 @@
                     </a>
                 </li>
                 &#160 | &#160
+            </ul>
+        </div>
+
+        <div id="cabecalhologo">
+
+            <img src="../RES/águaparSfundo.png" alt="Logo aguapar" class="logoa" height="117">
+
+            <form action="" id="form-itens">
+                <input type="text" placeholder="O QUE VOCÊ PROCURA?" class="caixatextopesquisa">
+                <input type="submit" value="OK" class="submit-form">
+            </form>
+
+            <a href="https://www.parana.pr.gov.br/" target="_blank">
+                <img src="../RES/brasao-pr.png" alt="Brasão do estado do Paraná" class="brasao">
+            </a> 
+                   
+        </div>
+
+        <div id="menu">
+            <ul>
                 <li>
-                    <a href="">
-                        
-                    </a>
+                    <a href="index.html">MENU INICIAL</a>
                 </li>
+                &#160&#160
+                <li>
+                    <a href="">A EMPRESA</a>
+                </li>
+                &#160&#160
+                <li>
+                    <a href="">SERVIÇOS</a>
+                </li>
+                &#160&#160
+                <li>
+                    <a href="">TRABALHE AQUI</a>
+                </li>
+                &#160&#160
+                <li>
+                    <a href="">IMPRENSA</a>
+                </li>
+
             </ul>
         </div>
     </header>
-    <main>
 
+    <main>
+        <div id="conteudo">
+
+        </div>
     </main>
+
     <footer>
 
     </footer>
