--- a/HTML/index.html
+++ b/HTML/index.html
@@ -111,19 +111,20 @@
 
             <br><br>
 
-            <div class="campoConteudo">
-                <a href="#">
-                    <img src="../RES/GALERIA_1-ALEX-TRINKS-960x540.png" alt="Noticia cultura Águapar">
+            <div id="noticias">
+                <div class="campoConteudo">
+                    <a href="#">
+                        <img src="../RES/GALERIA_1-ALEX-TRINKS-960x540.png" alt="Noticia cultura Águapar">
+                    </a>
+                </div>
+                <a href="#"></a>
+                    <div class="noticia-textos">
+                        <span class="chapeu-destaque">CULTURA</span>
+                        <h1>Águapar organiza acesso ao Museu do Saneamento para visita à exposição Planeta Água</h1>
+                    </div>
                 </a>
             </div>
-
-            <div class="noticia-textos">
-                <span class="chapeu-destaque">CULTURA</span>
-                <h1>Águapar organiza acesso ao Museu do Saneamento para visita à exposição Planeta Água</h1>
-                </div>
         </div>
-
-        
     </main>
 
     <footer>
